--- a/Documentation/Settings.yml
+++ b/Documentation/Settings.yml
@@ -1,9 +1,9 @@
 # Settings.yml
+
 ---
 conf.py:
-  ##==========================================
-  ## define configuration data for conf.py as
-  ## "parameter: value" pairs here:
-  ##------------------------------------------
-  exampleParameter: example value
+  copyright: 2012-2013
+  project: Templating Tutorial, Basics
+  version: 1.0.0
+  release: 1.0.0
 ...
