[TASK] Define proper metadata
Set proper metadata, both in Settings.yml and the top Index.rst file.

Change-Id: If15d521bbe3ed5f17fb43fec5341181ac2f033a4
Resolves: #45680
Reviewed-on: https://review.typo3.org/18516
Reviewed-by: Christopher
Tested-by: Christopher

--- a/Documentation/Settings.yml
+++ b/Documentation/Settings.yml
@@ -1,9 +1,8 @@
 # Settings.yml
-
 ---
 conf.py:
-  copyright: 2012-2013
-  project: Templating Tutorial, Basics
+  project: Templating Tutorial: Basics
+  copyright: 2011-2013
   version: 1.0.0
   release: 1.0.0
 ...
