[BUGFIX] Settings.yml cannot be parsed

--- a/Documentation/Settings.yml
+++ b/Documentation/Settings.yml
@@ -1,7 +1,7 @@
 # Settings.yml
 ---
 conf.py:
-  project: Templating Tutorial: Basics
+  project: 'Templating Tutorial: Basics'
   copyright: 2011-2013
   version: 1.0.0
   release: 1.0.0
