--- a/Documentation/Settings.yml
+++ b/Documentation/Settings.yml
@@ -2,10 +2,21 @@
 ---
 conf.py:
   project: 'Templating Tutorial: Basics'
-  copyright: 2011-2013
+  copyright: 2011-2014
   version: 1.0.0
   release: 1.0.0
   html_theme_options:
     github_repository: TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
     github_branch: latest
+  latex_documents:
+  - - Index
+    - t3templating.tex
+    - Templating Tutorial$\colon$Basics
+    - Documentation Team
+    - manual
+
+  latex_elements:
+    papersize: a4paper
+    pointsize: 10pt
+    preamble: \usepackage{typo3}
 ...
