--- a/Documentation/Settings.yml
+++ b/Documentation/Settings.yml
@@ -5,6 +5,16 @@ conf.py:
   copyright: 2011-2014
   version: 1.0.0
   release: 1.0.0
+  intersphinx_mapping:
+    t3tsref:
+    - http://docs.typo3.org/typo3cms/TyposcriptReference
+    - null
+    t3tssyntax:
+    - http://docs.typo3.org/typo3cms/TyposcriptSyntaxReference
+    - null
+    t3ts45:
+    - http://docs.typo3.org/typo3cms/TyposcriptIn45MinutesTutorial
+    - null
   html_theme_options:
     github_repository: TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
     github_branch: latest
