Improved links to use proper cross-linking. Replaced "TYPO3" by "TYPO3 CMS".

--- a/Documentation/Settings.yml
+++ b/Documentation/Settings.yml
@@ -15,6 +15,9 @@ conf.py:
     t3ts45:
     - http://docs.typo3.org/typo3cms/TyposcriptIn45MinutesTutorial
     - null
+    t3start:
+    - http://docs.typo3.org/typo3cms/GettingStartedTutorial
+    - null
   html_theme_options:
     github_repository: TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
     github_branch: latest
