[TASK] Change Git branch for 6-2

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -34,7 +34,7 @@ description = A tutorial about setting up a full web site template with TypoScri
 
 ; for theme t3SphinxThemeRtd
 
-github_branch        = latest
+github_branch        = 6-2
 github_commit_hash   =
 github_repository    = TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
 github_revision_msg  =
