[BUGFIX] Fix version and release

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -23,8 +23,8 @@
 ; you can use in 'conf.py'
 
 project     = Templating Tutorial: Basics
-version     = 6.2
-release     = 6.2
+version     = 7.6 (latest)
+release     = 7.6 (latest)
 t3author    = Documentation Team
 copyright   = since 2011 by the TYPO3 Documentation Team
 description = A tutorial about setting up a full web site template with TypoScript
