--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -2,7 +2,7 @@
 
 [general]
 
-project     = Tutorial: Templating with FLUIDTEMPLATE
+project     = Templating Tutorial: Using FLUIDTEMPLATE
 version     = master (8.7)
 release     = master (8.7)
 t3author    = Andrew Murphy
@@ -16,14 +16,14 @@ description = A tutorial on designing a basic web page using TYPO3 Fluid.
 
 github_branch        = master
 github_commit_hash   =
-github_repository    = TYPO3-Documentation/TYPO3CMS-Tutorial-TemplatingWithFluidtemplate
+github_repository    = TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
 github_revision_msg  =
 github_sphinx_locale =
 project_contact      =
 project_discussions  =
 project_home         =
-project_issues       = https://github.com/TYPO3-Documentation/TYPO3CMS-Tutorial-TemplatingWithFluidtemplate/issues
-project_repository   = https://github.com/TYPO3-Documentation/TYPO3CMS-Tutorial-TemplatingWithFluidtemplate
+project_issues       = https://github.com/TYPO3-Documentation/TYPO3CMS-Tutorial-Templating/issues
+project_repository   = https://github.com/TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
 use_opensearch       =
 
 
@@ -32,5 +32,4 @@ use_opensearch       =
 ; in this manual we actually use:
 
 # t3tsref      = https://docs.typo3.org/typo3cms/TyposcriptReference
-
 
