[TASK] Add composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "typo3/tutorial-templating",
     "type": "typo3-cms-documentation",
-    "description": "Step-by-step guide to templating in TYPO3 using TypoScript.",
-    "license": "OPL-1.0"
+    "description": "Templating with FLUIDTEMPLATE",
+    "license": "OPL-1.0",
+    "require": {
+      "typo3/cms-core": "^6.2"
+    }
 }
