[TASK] Adjust Settings.cfg for new branch and urls

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -34,7 +34,7 @@ description = A tutorial about setting up a full web site template with TypoScri
 
 ; for theme t3SphinxThemeRtd
 
-github_branch        = latest
+github_branch        = 7.6
 github_commit_hash   =
 github_repository    = TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
 github_revision_msg  =
@@ -51,10 +51,10 @@ use_opensearch       =
 
 ; in this manual we actually use:
 
-t3tsref      = https://docs.typo3.org/typo3cms/TyposcriptReference
-t3tssyntax   = https://docs.typo3.org/typo3cms/TyposcriptSyntaxReference
-t3start      = https://docs.typo3.org/typo3cms/GettingStartedTutorial
-t3ts45       = https://docs.typo3.org/typo3cms/TyposcriptIn45MinutesTutorial
+t3tsref      = https://docs.typo3.org/m/typo3/reference-typoscript/master/en-us/
+t3tssyntax   = https://docs.typo3.org/m/typo3/reference-typoscript-syntax/master/en-us/
+t3start      = https://docs.typo3.org/m/typo3/tutorial-getting-started/master/en-us/
+t3ts45       = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/master/en-us/
 
 
 # [extensions]
