--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -3,8 +3,8 @@
 [general]
 
 project     = Templating Tutorial: Using FLUIDTEMPLATE
-version     = master (8.7)
-release     = master (8.7)
+version     = 8.7
+release     = 8.7
 t3author    = Andrew Murphy
 copyright   = since 2011 by the TYPO3 Documentation Team
 description = A tutorial on designing a basic web page using TYPO3 Fluid.
@@ -14,11 +14,9 @@ description = A tutorial on designing a basic web page using TYPO3 Fluid.
 
 ; for theme t3SphinxThemeRtd
 
-github_branch        = master
-github_commit_hash   =
+github_branch        = 8.7
 github_repository    = TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
-github_revision_msg  =
-github_sphinx_locale =
+
 project_contact      =
 project_discussions  =
 project_home         =
