--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -3,8 +3,8 @@
 [general]
 
 project     = Templating Tutorial: Using FLUIDTEMPLATE
-version     = master (8.7)
-release     = master (8.7)
+version     = master (10-dev)
+release     = master (10-dev)
 t3author    = Andrew Murphy
 copyright   = since 2011 by the TYPO3 Documentation Team
 description = A tutorial on designing a basic web page using TYPO3 Fluid.
@@ -14,12 +14,12 @@ description = A tutorial on designing a basic web page using TYPO3 Fluid.
 
 ; for theme t3SphinxThemeRtd
 
+# Edit me on GitHub
 github_branch        = master
-github_commit_hash   =
 github_repository    = TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
-github_revision_msg  =
-github_sphinx_locale =
-project_contact      =
+
+# Related links
+project_contact      = https://typo3.org/community/teams/documentation/#c9886
 project_discussions  =
 project_home         =
 project_issues       = https://github.com/TYPO3-Documentation/TYPO3CMS-Tutorial-Templating/issues
