--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -32,4 +32,5 @@ use_opensearch       =
 ; in this manual we actually use:
 
 # t3tsref      = https://docs.typo3.org/typo3cms/TyposcriptReference
-
+t3editors     = https://docs.typo3.org/typo3cms/EditorsTutorial/
+t3start       = https://docs.typo3.org/typo3cms/GettingStartedTutorial/
