--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -29,5 +29,12 @@ use_opensearch       =
 
 ; in this manual we actually use:
 
-# t3tsref      = https://docs.typo3.org/typo3cms/TyposcriptReference
+t3coreapi      = https://docs.typo3.org/m/typo3/reference-coreapi/8.7/en-us/
+t3editors      = https://docs.typo3.org/m/typo3/tutorial-editors/8.7/en-us/
+t3extbasebook  = https://docs.typo3.org/m/typo3/book-extbasefluid/8.7/en-us/
+t3install      = https://docs.typo3.org/m/typo3/guide-installation/8.7/en-us/
+t3start        = https://docs.typo3.org/m/typo3/tutorial-getting-started/8.7/en-us/
+t3ts45         = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/8.7/en-us/
+t3tsref        = https://docs.typo3.org/m/typo3/reference-typoscript/8.7/en-us/
+t3vhref        = https://docs.typo3.org/other/typo3/view-helper-reference/8.7/en-us
 
