--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -29,6 +29,11 @@ use_opensearch       =
 
 ; in this manual we actually use:
 
-# t3tsref      = https://docs.typo3.org/typo3cms/TyposcriptReference
-t3editors     = https://docs.typo3.org/typo3cms/EditorsTutorial/
-t3start       = https://docs.typo3.org/typo3cms/GettingStartedTutorial/
+t3coreapi      = https://docs.typo3.org/m/typo3/reference-coreapi/master/en-us/
+t3editors      = https://docs.typo3.org/m/typo3/tutorial-editors/master/en-us/
+t3extbasebook  = https://docs.typo3.org/m/typo3/book-extbasefluid/master/en-us/
+t3install      = https://docs.typo3.org/m/typo3/guide-installation/master/en-us/
+t3start        = https://docs.typo3.org/m/typo3/tutorial-getting-started/master/en-us/
+t3ts45         = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/master/en-us/
+t3tsref        = https://docs.typo3.org/m/typo3/reference-typoscript/master/en-us/
+t3vhref        = https://docs.typo3.org/other/typo3/view-helper-reference/master/en-us
