Use links to same version in Settings.cfg

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -29,11 +29,11 @@ use_opensearch       =
 
 ; in this manual we actually use:
 
-t3coreapi      = https://docs.typo3.org/m/typo3/reference-coreapi/master/en-us/
-t3editors      = https://docs.typo3.org/m/typo3/tutorial-editors/master/en-us/
-t3extbasebook  = https://docs.typo3.org/m/typo3/book-extbasefluid/master/en-us/
-t3install      = https://docs.typo3.org/m/typo3/guide-installation/master/en-us/
-t3start        = https://docs.typo3.org/m/typo3/tutorial-getting-started/master/en-us/
-t3ts45         = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/master/en-us/
-t3tsref        = https://docs.typo3.org/m/typo3/reference-typoscript/master/en-us/
-t3vhref        = https://docs.typo3.org/other/typo3/view-helper-reference/master/en-us
+t3coreapi      = https://docs.typo3.org/m/typo3/reference-coreapi/9.5/en-us/
+t3editors      = https://docs.typo3.org/m/typo3/tutorial-editors/9.5/en-us/
+t3extbasebook  = https://docs.typo3.org/m/typo3/book-extbasefluid/9.5/en-us/
+t3install      = https://docs.typo3.org/m/typo3/guide-installation/9.5/en-us/
+t3start        = https://docs.typo3.org/m/typo3/tutorial-getting-started/9.5/en-us/
+t3ts45         = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/9.5/en-us/
+t3tsref        = https://docs.typo3.org/m/typo3/reference-typoscript/9.5/en-us/
+t3vhref        = https://docs.typo3.org/other/typo3/view-helper-reference/9.5/en-us
