--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -51,10 +51,10 @@ use_opensearch       =
 
 ; in this manual we actually use:
 
-t3tsref      = https://docs.typo3.org/m/typo3/reference-typoscript/master/en-us/
-t3tssyntax   = https://docs.typo3.org/m/typo3/reference-typoscript-syntax/master/en-us/
-t3start      = https://docs.typo3.org/m/typo3/tutorial-getting-started/master/en-us/
-t3ts45       = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/master/en-us/
+t3tsref      = https://docs.typo3.org/m/typo3/reference-typoscript/7.6/en-us/
+t3tssyntax   = https://docs.typo3.org/m/typo3/reference-typoscript-syntax/7.6/en-us/
+t3start      = https://docs.typo3.org/m/typo3/tutorial-getting-started/7.6/en-us/
+t3ts45       = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/7.6/en-us/
 
 
 # [extensions]
