--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -3,8 +3,8 @@
 [general]
 
 project     = Templating Tutorial: Using FLUIDTEMPLATE
-version     = master (10-dev)
-release     = master (10-dev)
+version     = 10.4
+release     = 10.4
 t3author    = Andrew Murphy
 copyright   = since 2011 by the TYPO3 Documentation Team
 description = A tutorial on designing a basic web page using TYPO3 Fluid.
@@ -15,7 +15,7 @@ description = A tutorial on designing a basic web page using TYPO3 Fluid.
 ; for theme t3SphinxThemeRtd
 
 # Edit me on GitHub
-github_branch        = master
+github_branch        = 10.4
 github_repository    = TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
 
 # Related links
