--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -3,8 +3,8 @@
 [general]
 
 project     = Templating Tutorial: Using FLUIDTEMPLATE
-version     = master (10-dev)
-release     = master (10-dev)
+version     = 11.0 (development)
+release     = 11.0 (development)
 t3author    = Andrew Murphy
 copyright   = since 2011 by the TYPO3 Documentation Team
 description = A tutorial on designing a basic web page using TYPO3 Fluid.
