--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -3,8 +3,8 @@
 [general]
 
 project     = Templating Tutorial: Using FLUIDTEMPLATE
-version     = 11.0 (development)
-release     = 11.0 (development)
+version     = main
+release     = main
 t3author    = Andrew Murphy
 copyright   = since 2011 by the TYPO3 Documentation Team
 description = A tutorial on designing a basic web page using TYPO3 Fluid.
@@ -15,7 +15,7 @@ description = A tutorial on designing a basic web page using TYPO3 Fluid.
 ; for theme t3SphinxThemeRtd
 
 # Edit me on GitHub
-github_branch        = master
+github_branch        = main
 github_repository    = TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
 
 # Related links
@@ -31,11 +31,11 @@ use_opensearch       =
 
 ; in this manual we actually use:
 
-t3coreapi      = https://docs.typo3.org/m/typo3/reference-coreapi/master/en-us/
-t3editors      = https://docs.typo3.org/m/typo3/tutorial-editors/master/en-us/
-t3extbasebook  = https://docs.typo3.org/m/typo3/book-extbasefluid/master/en-us/
-t3install      = https://docs.typo3.org/m/typo3/guide-installation/master/en-us/
-t3start        = https://docs.typo3.org/m/typo3/tutorial-getting-started/master/en-us/
-t3ts45         = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/master/en-us/
-t3tsref        = https://docs.typo3.org/m/typo3/reference-typoscript/master/en-us/
-t3vhref        = https://docs.typo3.org/other/typo3/view-helper-reference/master/en-us
+t3coreapi      = https://docs.typo3.org/m/typo3/reference-coreapi/main/en-us/
+t3editors      = https://docs.typo3.org/m/typo3/tutorial-editors/main/en-us/
+t3extbasebook  = https://docs.typo3.org/m/typo3/book-extbasefluid/main/en-us/
+t3install      = https://docs.typo3.org/m/typo3/guide-installation/main/en-us/
+t3start        = https://docs.typo3.org/m/typo3/tutorial-getting-started/main/en-us/
+t3ts45         = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/main/en-us/
+t3tsref        = https://docs.typo3.org/m/typo3/reference-typoscript/main/en-us/
+t3vhref        = https://docs.typo3.org/other/typo3/view-helper-reference/main/en-us
