--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,9 @@
-# EditorConfig is awesome: http://EditorConfig.org
+# EditorConfig is awesome: https://EditorConfig.org
 #
-# Use as master: https://github.com/TYPO3-Documentation/T3DocTeam/blob/master/.editorconfig
+# Use as master: https://github.com/TYPO3-Documentation/T3DocTeam/blob/main/.editorconfig
 
-
-# top-most EditorConfig file? false = no!
-root = false
+# top-most EditorConfig file
+root = true
 
 [{*.rst,*.rst.txt}]
 charset = utf-8
@@ -13,6 +12,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
 indent_size = 3
+max_line_length = 80
 
 # MD-Files
 [*.md]
@@ -22,3 +22,4 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
 indent_size = 4
+max_line_length = 80
