--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,41 +1,62 @@
-# coding: utf-8
+# More information about this file:
+# https://docs.typo3.org/m/typo3/docs-how-to-document/main/en-us/GeneralConventions/FileStructure.html#settings-cfg
 
 [general]
 
-project     = Templating Tutorial: Using FLUIDTEMPLATE
-version     = 11.0 (development)
-release     = 11.0 (development)
-t3author    = Andrew Murphy
-copyright   = since 2011 by the TYPO3 Documentation Team
-description = A tutorial on designing a basic web page using TYPO3 Fluid.
-
+project     = Fluid Templating Tutorial
+version     = 11.5
+release     = 11.5
+copyright   = since 2012 by the TYPO3 contributors
 
 [html_theme_options]
 
-; for theme t3SphinxThemeRtd
-
-# Edit me on GitHub
-github_branch        = master
+# "Edit on GitHub" button
 github_repository    = TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
+github_branch        = 11.5
 
-# Related links
-project_contact      = https://typo3.org/community/teams/documentation/#c9886
-project_discussions  =
-project_home         =
-project_issues       = https://github.com/TYPO3-Documentation/TYPO3CMS-Tutorial-Templating/issues
+# Footer links
+project_home         = https://docs.typo3.org/m/typo3/tutorial-templating/11.5/en-us/
+project_contact      = https://typo3.slack.com/archives/C028JEPJL
 project_repository   = https://github.com/TYPO3-Documentation/TYPO3CMS-Tutorial-Templating
-use_opensearch       =
+project_issues       = https://github.com/TYPO3-Documentation/TYPO3CMS-Tutorial-Templating/issues
+project_discussions  =
 
+use_opensearch       =
 
 [intersphinx_mapping]
 
-; in this manual we actually use:
+# Official TYPO3 manuals
+# h2document     = https://docs.typo3.org/m/typo3/docs-how-to-document/main/en-us/
+# t3cheatsheets  = https://docs.typo3.org/m/typo3/docs-cheatsheets/main/en-us/
+# t3contribute   = https://docs.typo3.org/m/typo3/guide-contributionworkflow/main/en-us/
+t3coreapi      = https://docs.typo3.org/m/typo3/reference-coreapi/11.5/en-us/
+# t3docteam      = https://docs.typo3.org/m/typo3/team-t3docteam/main/en-us/
+t3editors      = https://docs.typo3.org/m/typo3/tutorial-editors/11.5/en-us/
+t3extbasebook  = https://docs.typo3.org/m/typo3/book-extbasefluid/11.5/en-us/
+# t3extexample   = https://docs.typo3.org/m/typo3/guide-example-extension-manual/main/en-us/
+# t3home         = https://docs.typo3.org/
+# t3install      = https://docs.typo3.org/m/typo3/guide-installation/main/en-us/
+# t3l10n         = https://docs.typo3.org/m/typo3/guide-frontendlocalization/main/en-us/
+# t3sitepackage  = https://docs.typo3.org/m/typo3/tutorial-sitepackage/main/en-us/
+t3start        = https://docs.typo3.org/m/typo3/tutorial-getting-started/11.5/en-us/
+# t3tca          = https://docs.typo3.org/m/typo3/reference-tca/main/en-us/
+# t3templating   = https://docs.typo3.org/m/typo3/tutorial-templating/main/en-us/
+# t3translate    = https://docs.typo3.org/m/typo3/guide-frontendlocalization/main/en-us/
+# t3tsconfig     = https://docs.typo3.org/m/typo3/reference-tsconfig/main/en-us/
+t3tsref        = https://docs.typo3.org/m/typo3/reference-typoscript/11.5/en-us/
+t3ts45         = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/11.5/en-us/
+t3viewhelper   = https://docs.typo3.org/other/typo3/view-helper-reference/11.5/en-us/
+# t3upgrade      = https://docs.typo3.org/m/typo3/guide-installation/main/en-us/
 
-t3coreapi      = https://docs.typo3.org/m/typo3/reference-coreapi/master/en-us/
-t3editors      = https://docs.typo3.org/m/typo3/tutorial-editors/master/en-us/
-t3extbasebook  = https://docs.typo3.org/m/typo3/book-extbasefluid/master/en-us/
-t3install      = https://docs.typo3.org/m/typo3/guide-installation/master/en-us/
-t3start        = https://docs.typo3.org/m/typo3/tutorial-getting-started/master/en-us/
-t3ts45         = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/master/en-us/
-t3tsref        = https://docs.typo3.org/m/typo3/reference-typoscript/master/en-us/
-t3vhref        = https://docs.typo3.org/other/typo3/view-helper-reference/master/en-us
+# TYPO3 system extensions
+# ext_adminpanel     = https://docs.typo3.org/c/typo3/cms-adminpanel/main/en-us/
+# ext_core           = https://docs.typo3.org/c/typo3/cms-core/main/en-us/
+# ext_dashboard      = https://docs.typo3.org/c/typo3/cms-dashboard/main/en-us/
+# ext_felogin        = https://docs.typo3.org/c/typo3/cms-felogin/main/en-us/
+# ext_form           = https://docs.typo3.org/c/typo3/cms-form/main/en-us/
+# ext_fsc            = https://docs.typo3.org/c/typo3/cms-fluid-styled-content/main/en-us/
+# ext_indexed_search = https://docs.typo3.org/c/typo3/cms-indexed-search/main/en-us/
+# ext_rte_ckeditor   = https://docs.typo3.org/c/typo3/cms-rte-ckeditor/main/en-us/
+# ext_scheduler      = https://docs.typo3.org/c/typo3/cms-scheduler/main/en-us/
+# ext_seo            = https://docs.typo3.org/c/typo3/cms-seo/main/en-us/
+# ext_workspaces     = https://docs.typo3.org/c/typo3/cms-workspaces/main/en-us/
